examples/type_system/failing/113_keyword_alias_var.flx
var x = 1
const y = 2
val z = 3
